--- a/style.css
+++ b/style.css
@@ -1,40 +1,10 @@
 @charset "UTF-8";
 
-/*The designs were created to the following widths:
-
-- Mobile: 375px
-- Desktop: 1440px
-
-## Colors
-
-### Primary
-
-Bright orange: hsl(31, 77%, 52%)
-Dark cyan: hsl(184, 100%, 22%)
-Very dark cyan: hsl(179, 100%, 13%)
-
-### Neutral
-
-Transparent white (paragraphs): hsla(0, 0%, 100%, 0.75)
-Very light gray (background, headings, buttons): hsl(0, 0%, 95%)
-
-## Typography
-
-### Body Copy
-
-- Font size: 15px
-
-### Font
-
-- Family: [Lexend Deca](https://fonts.google.com/specimen/Lexend+Deca)
-- Weights: 400
-
-- Family: [Big Shoulders Display](https://fonts.google.com/specimen/Big+Shoulders+Display)
-- Weights: 700 */
-
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap');
 
+
+/* Mobile */
 
 * {
     padding: 0;
@@ -43,33 +13,34 @@ Very light gray (background, headings, buttons): hsl(0, 0%, 95%)
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+    max-width: 100vw;
+    min-height: 100vh;
     background-color: hsl(0, 0%, 95%);
     display: flex;
     justify-content: center;
-    align-items: center;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
 }
 
 .container {
-    width: 85vw;
+    max-width: 20.625rem;
 }
 
 .icons img {
-    width: 50px;
+    width: 3.125rem;
 }
 
 .carros {
-    padding: 46px;
+    padding: 3.5rem;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 1.7rem;
 }
 
 #sedans {
     background-color: hsl(31, 77%, 52%);
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-top-left-radius: 0.312rem;
+    border-top-right-radius: 0.312rem;
 }
 
 #suv {
@@ -78,8 +49,8 @@ body {
 
 #luxury {
     background-color: hsl(179, 100%, 13%);
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 0.312rem;
+    border-bottom-right-radius: 0.312rem;
 }
 
 .carro-titulo {
@@ -92,13 +63,13 @@ body {
     font-family: 'Lexend Deca';
     font-size: 0.9rem;
     color: hsla(0, 0%, 100%, 0.75);
-    line-height: 25px;
+    line-height: 1.56rem;
 }
 
 .button {
-    width: 35vw;
-    border-radius: 20px;
-    padding: 12px;
+    max-width: 8.75rem;
+    border-radius: 1.25rem;
+    padding: 0.75rem;
     border-style: none;
     background-color: hsl(0, 0%, 95%);
     font-family: 'Lexend Deca';
@@ -110,10 +81,71 @@ body {
     color: hsl(31, 77%, 52%);
 }
 
+#button-sedan:hover {
+    color: hsl(0, 0%, 95%);
+    background-color: hsl(31, 77%, 52%);
+    border-style: double;
+    border-color: hsl(0, 0%, 95%);
+    transition: 0.1s;
+}
+
 #button-suv {
     color: hsl(184, 100%, 22%);
 }
 
+#button-suv:hover {
+    color: hsl(0, 0%, 95%);
+    background-color: hsl(184, 100%, 22%);
+    border-style: double;
+    border-color: hsl(0, 0%, 95%);
+    transition: 0.1s;
+}
+
 #button-luxury {
     color: hsl(179, 100%, 13%);
+}
+
+#button-luxury:hover {
+    color: hsl(0, 0%, 95%);
+    background-color: hsl(179, 100%, 13%);
+    border-style: double;
+    border-color: hsl(0, 0%, 95%);
+    transition: 0.1s;
+}
+
+/* Desktop */
+
+@media screen and (min-width: 1000px) {
+   body {
+        margin: auto;
+        align-items: center;
+   }
+
+   .container {
+        display: flex;
+        max-width: 59.375rem;
+   }
+
+   .icons img {
+        width: 4.125rem;
+    }
+
+   .carros {
+        padding: 3.7rem;
+   }
+
+   #luxury {
+        border-top-right-radius: 0.312rem;
+        border-bottom-left-radius: 0rem;
+   }
+
+   #sedans {
+        border-bottom-left-radius: 0.312rem;
+        border-top-right-radius: 0rem;
+   }
+
+   .descricao {
+        margin-bottom: 3.125rem;
+        line-height: 1.7rem;
+   }
 }
